--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,21 @@
 name: adaptive_theme_fluent_ui
 description: An extension of adaptive_theme that supports Fluent UI.
-version: 0.0.1
+version: 0.1.0
 homepage: https://github.com/birjuvachhani/adaptive_theme_fluent_ui
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=2.17.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+#  adaptive_theme: '>=3.1.0 <4.0.0'
+  adaptive_theme:
+    git:
+      url: https://github.com/birjuvachhani/adaptive_theme.git
+      ref: 'feature/generic-refactor'
+  fluent_ui: '>=3.12.0 <4.0.0'
 
 dev_dependencies:
   flutter_test:
