--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: adaptive_theme_fluent_ui
 description: An extension of adaptive_theme that supports Fluent UI.
-version: 0.1.0
+version: 1.0.0
 homepage: https://github.com/birjuvachhani/adaptive_theme_fluent_ui
 
 environment:
@@ -10,11 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-#  adaptive_theme: '>=3.1.0 <4.0.0'
-  adaptive_theme:
-    git:
-      url: https://github.com/birjuvachhani/adaptive_theme.git
-      ref: 'feature/generic-refactor'
+  adaptive_theme: '>=3.1.0 <4.0.0'
   fluent_ui: '>=3.12.0 <4.0.0'
 
 dev_dependencies:
