--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   adaptive_theme_fluent_ui:
     path: ../
   fluent_ui: '>=3.12.0 <4.0.0'
+  adaptive_theme: '>=3.1.0 <4.0.0'
 
 dev_dependencies:
   flutter_test:
