--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: adaptive_theme_fluent_ui
-description: An extension of adaptive_theme that supports Fluent UI.
+description: An extension package of adaptive_theme library that supports dynamic theming for fluent_ui package.
 version: 1.0.0
 homepage: https://github.com/birjuvachhani/adaptive_theme_fluent_ui
 
