--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,14 +1,14 @@
 name: Tests
 
 on:
-  push:
-    paths:
-      - '**.dart'
-    branches:
-      - main
-    tags-ignore:
-      - '**'
-  pull_request:
+#  push:
+#    paths:
+#      - '**.dart'
+#    branches:
+#      - main
+#    tags-ignore:
+#      - '**'
+#  pull_request:
   workflow_dispatch:
 
 jobs:
