--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,31 +1,35 @@
 name: Publish Package
 
 on:
-  release:
-    types: [ published ]
+  push:
+    tags:
+    # must align with the tag-pattern configured on pub.dev, often just replace
+    #  with [0-9]+.[0-9]+.[0-9]+*
+    #  - 'v[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: 'v'
+    # If you prefer tags like '1.2.3', without the 'v' prefix, then use:
+    - '[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: ''
+    # If you repository contains multiple packages consider a pattern like:
+    # - 'my_package_name-v[0-9]+.[0-9]+.[0-9]+*'
   workflow_dispatch:
 
 jobs:
-  build:
+  publish:
+    permissions:
+      id-token: write # This is required for authentication using OIDC
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: dart-lang/setup-dart@v1
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
       - run: flutter --version
       - name: Install dependencies
-        run: flutter packages get
-      - name: Format code
-        run: dart format --fix .
-#      - name: Tests
-#        run: flutter test .
+        run: flutter pub get
+      - name: Check code formatting
+        run: dart format --set-exit-if-changed .
       - name: Dry Run
         run: flutter pub publish --dry-run
       - name: Publish
-        uses: k-paxian/dart-package-publisher@v1.5.1
-        with:
-          credentialJson: ${{ secrets.CREDENTIAL_JSON }}
-          flutter: true
-          skipTests: true
+        run: dart pub publish --force
